--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,6 +21,7 @@
     -->
     <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.css" />
     <link href="https://fonts.googleapis.com/css?family=Gochi+Hand&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
     <title>React Journal</title>
   </head>
